--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="card-body">
 				<form id="addTaskForm">	
 					<div class="input-group mb-3">
-						<input id="txtTaskName" name="taskName" type="text" class="form-control" placeholder="Type a new task" aria-describedby="btnAddNewTask" autocomplete="off">
+						<input id="txtTaskName" name="taskName" type="text" class="form-control" placeholder="Type a new task" aria-describedby="btnAddNewTask" autocomplete="off" autofocus>
 						<div class="input-group-append">
 							<button class="btn btn-primary" type="submit" id="btnAddNewTask">
 								<i class="fas fa-plus"></i>
